--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -8,14 +8,18 @@
     <title>Music Recommendation</title>
 </head>
 <body>
-    <h2>Recommended Songs</h2>
-    <div class="recommendations">
-        {% for name, poster in names_and_posters %}
-            <div class="recommendation">
-                <p>{{ name }}</p>
-                <img src="{{ poster }}" alt="{{ name }} poster">
-            </div>
-        {% endfor %}
+    <div class="container">
+        <div class="header">
+            <h2>Recommended Songs</h2>
+        </div>
+        <div class="recommendations">
+            {% for name, poster in names_and_posters %}
+                <div class="recommendation">
+                    <p>{{ name }}</p>
+                    <img src="{{ poster }}" alt="{{ name }} poster">
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </body>
 </html>
